--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,11 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "svelte-spa-router": "^4.0.1"
-  }
+  },
+  "description": "This template should help get you started developing with Svelte in Vite.",
+  "main": "svelte.config.js",
+  "author": "",
+  "license": "ISC"
 }
