--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "svelte-spa-router": "^4.0.1"
   },
   "description": "This template should help get you started developing with Svelte in Vite.",
