--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=mysql+pymysql://user:test1234@database-1.c5kqucccw075.ap-northeast-2.rds.amazonaws.com/db
+DB_URL=mysql+pymysql://root:test123@database-1.c1ass4wwycc9.ap-northeast-2.rds.amazonaws.com/db
